Fixed all the shit i fucked up. Added helper classes. Added more methods in rabbit class for increased readability. Optimized rabbits pathfinding. Made it so that a new hole appears when there are 6 or more rabbits in a given hole, which all above the first 5 rabbits will move to. probably changed a bunch more stuff, but i can't remember.
To test the code, uncomment the test parts (currently line 60 - 63, and 34 for world size) in the Main class.